--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "lottie": "^0.0.1",
+    "lottie-react": "^2.2.1",
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.3.4",
+    "reducer": "^0.19.2",
+    "router-dom": "^2.2.9",
+    "sweetalert2": "^11.4.17",
+    "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "lottie-react": "^2.2.1",
+    "postcss": "^8.4.13",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
