--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "khalti-checkout-web": "^2.2.0",
     "lottie": "^0.0.1",
     "lottie-react": "^2.2.1",
     "node-sass": "^7.0.1",
